// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Azure ARM generator > produces valid, parseable ARM JSON with a securestring parameter and no secret default 1`] = `
"{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "SoT Cloud Template Studio",
      "version": "0.1.0"
    },
    "_note": "Generated independently from the InternalModel (not compiled from Bicep). Test in a non-production environment before Skillable use."
  },
  "parameters": {
    "location": {
      "type": "string",
      "metadata": {
        "description": "Azure region the resources are deployed into."
      },
      "defaultValue": "uksouth"
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "Administrative username for the virtual machine."
      },
      "defaultValue": "azureuser"
    },
    "adminAuthSecret": {
      "type": "securestring",
      "metadata": {
        "description": "Administrative password or SSH public key, supplied at deployment time. Never stored in the template."
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-11-01",
      "name": "lab-vm-nsg",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": []
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-11-01",
      "name": "lab-vm-vnet",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'lab-vm-nsg')]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.10.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "lab-subnet",
            "properties": {
              "addressPrefix": "10.10.1.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'lab-vm-nsg')]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-11-01",
      "name": "lab-vm-nic",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', 'lab-vm-vnet')]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', 'lab-vm-vnet'), '/subnets/lab-subnet')]"
              },
              "privateIPAllocationMethod": "Dynamic"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2024-07-01",
      "name": "lab-vm",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', 'lab-vm-nic')]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B2s"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "Canonical",
            "offer": "0001-com-ubuntu-server-jammy",
            "sku": "22_04-lts-gen2",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "StandardSSD_LRS"
            }
          }
        },
        "osProfile": {
          "computerName": "lab-vm",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "[format('/home/{0}/.ssh/authorized_keys', parameters('adminUsername'))]",
                  "keyData": "[parameters('adminAuthSecret')]"
                }
              ]
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'lab-vm-nic')]"
            }
          ]
        }
      }
    }
  ],
  "outputs": {
    "lab-vmName": {
      "type": "string",
      "value": "lab-vm"
    }
  }
}
"
`;

exports[`Azure Bicep generator > renders a deterministic, secure private Linux VM template 1`] = `
"// Generated by SoT Cloud Template Studio.
// Design secure cloud lab infrastructure without writing templates from scratch.
//
// Every resource below is traceable to evidence in the review. This template
// must be tested in a non-production environment before Skillable use.

targetScope = 'resourceGroup'

@description('Azure region the resources are deployed into.')
param location string = 'uksouth'

@description('Administrative username for the virtual machine.')
param adminUsername string = 'azureuser'

@description('Administrative password or SSH public key, supplied at deployment time. Never stored in the template.')
@secure()
param adminAuthSecret string

resource lab_vm_nsg 'Microsoft.Network/networkSecurityGroups@2023-11-01' = {
  name: 'lab-vm-nsg'
  location: location
  properties: {
    securityRules: []
  }
}

resource lab_vm_vnet 'Microsoft.Network/virtualNetworks@2023-11-01' = {
  name: 'lab-vm-vnet'
  location: location
  properties: {
    addressSpace: {
      addressPrefixes: [
        '10.10.0.0/16'
      ]
    }
    subnets: [
      {
        name: 'lab-subnet'
        properties: {
          addressPrefix: '10.10.1.0/24'
          networkSecurityGroup: {
            id: lab_vm_nsg.id
          }
        }
      }
    ]
  }
}

resource lab_vm_nic 'Microsoft.Network/networkInterfaces@2023-11-01' = {
  name: 'lab-vm-nic'
  location: location
  properties: {
    ipConfigurations: [
      {
        name: 'ipconfig1'
        properties: {
          subnet: {
            id: '\${lab_vm_vnet.id}/subnets/lab-subnet'
          }
          privateIPAllocationMethod: 'Dynamic'
        }
      }
    ]
  }
}

resource lab_vm 'Microsoft.Compute/virtualMachines@2024-07-01' = {
  name: 'lab-vm'
  location: location
  properties: {
    hardwareProfile: {
      vmSize: 'Standard_B2s'
    }
    storageProfile: {
      imageReference: {
        publisher: 'Canonical'
        offer: '0001-com-ubuntu-server-jammy'
        sku: '22_04-lts-gen2'
        version: 'latest'
      }
      osDisk: {
        createOption: 'FromImage'
        managedDisk: {
          storageAccountType: 'StandardSSD_LRS'
        }
      }
    }
    osProfile: {
      computerName: 'lab-vm'
      adminUsername: adminUsername
      linuxConfiguration: {
        disablePasswordAuthentication: true
        ssh: {
          publicKeys: [
            {
              path: '/home/\${adminUsername}/.ssh/authorized_keys'
              keyData: adminAuthSecret
            }
          ]
        }
      }
    }
    networkProfile: {
      networkInterfaces: [
        {
          id: lab_vm_nic.id
        }
      ]
    }
  }
}

@description('Name of the virtual machine.')
output lab-vmName string = 'lab-vm'
"
`;

exports[`Azure Bicep generator > renders a public Windows VM with boot diagnostics and an NSG rule 1`] = `
"// Generated by SoT Cloud Template Studio.
// Design secure cloud lab infrastructure without writing templates from scratch.
//
// Every resource below is traceable to evidence in the review. This template
// must be tested in a non-production environment before Skillable use.

targetScope = 'resourceGroup'

@description('Azure region the resources are deployed into.')
param location string = 'eastus'

@description('Administrative username for the virtual machine.')
param adminUsername string = 'azureuser'

@description('Administrative password or SSH public key, supplied at deployment time. Never stored in the template.')
@secure()
param adminAuthSecret string

resource win_vm_nsg 'Microsoft.Network/networkSecurityGroups@2023-11-01' = {
  name: 'win-vm-nsg'
  location: location
  properties: {
    securityRules: [
      {
        name: 'allow-tcp-3389'
        properties: {
          priority: 1000
          direction: 'Inbound'
          access: 'Allow'
          protocol: 'Tcp'
          sourcePortRange: '*'
          destinationPortRange: '3389'
          sourceAddressPrefix: '203.0.113.0/24'
          destinationAddressPrefix: '*'
        }
      }
    ]
  }
}

resource win_vm_vnet 'Microsoft.Network/virtualNetworks@2023-11-01' = {
  name: 'win-vm-vnet'
  location: location
  properties: {
    addressSpace: {
      addressPrefixes: [
        '10.20.0.0/16'
      ]
    }
    subnets: [
      {
        name: 'win-subnet'
        properties: {
          addressPrefix: '10.20.1.0/24'
          networkSecurityGroup: {
            id: win_vm_nsg.id
          }
        }
      }
    ]
  }
}

resource win_vm_pip 'Microsoft.Network/publicIPAddresses@2023-11-01' = {
  name: 'win-vm-pip'
  location: location
  sku: {
    name: 'Standard'
  }
  properties: {
    publicIPAllocationMethod: 'Static'
  }
}

resource win_vm_diag 'Microsoft.Storage/storageAccounts@2023-05-01' = {
  name: 'winvmdiag'
  location: location
  sku: {
    name: 'Standard_LRS'
  }
  kind: 'StorageV2'
  properties: {
    allowBlobPublicAccess: false
    minimumTlsVersion: 'TLS1_2'
  }
}

resource win_vm_nic 'Microsoft.Network/networkInterfaces@2023-11-01' = {
  name: 'win-vm-nic'
  location: location
  properties: {
    ipConfigurations: [
      {
        name: 'ipconfig1'
        properties: {
          subnet: {
            id: '\${win_vm_vnet.id}/subnets/win-subnet'
          }
          privateIPAllocationMethod: 'Dynamic'
          publicIPAddress: {
            id: win_vm_pip.id
          }
        }
      }
    ]
  }
}

resource win_vm 'Microsoft.Compute/virtualMachines@2024-07-01' = {
  name: 'win-vm'
  location: location
  properties: {
    hardwareProfile: {
      vmSize: 'Standard_D2s_v5'
    }
    storageProfile: {
      imageReference: {
        publisher: 'MicrosoftWindowsServer'
        offer: 'WindowsServer'
        sku: '2022-datacenter-azure-edition'
        version: 'latest'
      }
      osDisk: {
        createOption: 'FromImage'
        managedDisk: {
          storageAccountType: 'StandardSSD_LRS'
        }
      }
    }
    osProfile: {
      computerName: 'win-vm'
      adminUsername: adminUsername
      adminPassword: adminAuthSecret
    }
    networkProfile: {
      networkInterfaces: [
        {
          id: win_vm_nic.id
        }
      ]
    }
    diagnosticsProfile: {
      bootDiagnostics: {
        enabled: true
        storageUri: win_vm_diag.properties.primaryEndpoints.blob
      }
    }
  }
}

@description('Resource id of the public IP address.')
output win-vmPublicIpResourceId string = resourceId('Microsoft.Network/publicIPAddresses', 'win-vm-pip')

@description('Name of the virtual machine.')
output win-vmName string = 'win-vm'
"
`;
